# light-jarvis

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  setup.py
.github/workflows/: ci.yml  quick-check.yml
config/: default.toml  prompt.txt  tools.json
debug/: jarvis_cli.py  register_hue_user.py  test_connection.py  test_hue_tool.py
jarvis/: __init__.py  cli.py
scripts/: jarvis.py  run_tests.py  setup.py  setup_whisper.py  start_all_services.py  start_main_orchestrator.py  start_mcp_orchestrator.py  start_mcp_server.py  start_whisper_service.py  test_integration.py
tests/: __init__.py  conftest.py
tests/integration/: test_assistant_integration.py
tests/unit/core/: test_assistant.py
tests/unit/llm_service/: test_llm_service.py
tests/unit/mcp_server/: test_mcp_server.py
tests/unit/shared/: test_config.py  test_logger.py  test_models.py
tests/unit/tools/: test_gmail_tool.py
ui/cli/: cli.py
ui/web/: README.md  package-lock.json  package.json  tailwind.config.js
ui/web/app/: globals.css  layout.tsx  page.tsx
ui/web/app/routes/: page.tsx
ui/web/app/status/: page.tsx
ui/web/components/: ai-response.tsx  hero-section.tsx  input-form.tsx  speaking-bubble.tsx  status-indicator.tsx
ui/web/hooks/: useAudioRecorder.ts  useChat.ts  useServiceStatus.ts
ui/web/lib/: api.ts  audio-recorder.ts  constants.ts  utils.ts
ui/web/services/: AudioService.ts  BaseService.ts  ChatService.ts  ServiceManager.ts  StatusService.ts
ui/web/types/: index.ts  speech.d.ts
